app/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: petclinic-db
  labels:
    service: db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: db
  serviceName: petclinic-db
  template:
    metadata:
      labels:
        service: db
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: db
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: azurefile
      resources:
        requests:
          storage: 1Gi
