app/base/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
  selector:
    service: app
