app/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: petclinic
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: petclinic-app
              servicePort: 8080
      host: petclinic.apps-crc.testing
